# mongodb_store

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  mainpage.dox  manifest.xml
libmongocxx_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
libmongocxx_ros/cmake/: FindMongoClient.cmake
log_extractor/: CHANGELOG.rst  CMakeLists.txt  package.xml
mongodb_log/: CHANGELOG.rst  CMakeLists.txt  package.xml
mongodb_log/scripts/: mongodb_log.py
mongodb_log/src/: mongodb_log_cimg.cpp  mongodb_log_pcl.cpp  mongodb_log_tf.cpp  mongodb_log_trimesh.cpp  ros_mongodb_log.lua
mongodb_log/src/benchmark/: graph.sh  produce_tf.cpp
mongodb_log/test/: simple_count.test  test_publisher.py
mongodb_store/: CHANGELOG.rst  CMakeLists.txt  README.md  backup_config.yaml  example_replication_config.yaml  package.xml  setup.py
mongodb_store/cmake/: FindMongoClient.cmake  FindMongoDB.cmake
mongodb_store/doc/: Makefile  conf.py  manifest.yaml  message_store_proxy.rst  modules.rst  mongodb_store.rst  util.rst
mongodb_store/include/mongodb_store/: message_store.h  util.h
mongodb_store/launch/: mongodb_store.launch  mongodb_store_inc.launch  store.launch
mongodb_store/scripts/: config_manager.py  example_message_store_client.py  example_multi_event_log.py  message_store_node.py  mongo_bridge.py  mongodb_play.py  mongodb_server.py  replicator_client.py  replicator_node.py
mongodb_store/src/: example_mongodb_store_cpp_client.cpp  example_multi_event_log.cpp
mongodb_store/src/mongodb_store/: message_store.py  util.py
mongodb_store/srv/: GetParam.srv
mongodb_store/tests/: config_manager.test  message_store.test  message_store_cpp_client.test  message_store_cpp_test.cpp  messagestore.test  replication.test  test_configmanager.py  test_messagestore.py  test_replication.py
mongodb_store_cpp_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
mongodb_store_cpp_client/src/: message_store.cpp  point_cloud_test.cpp
mongodb_store_cpp_client/tests/: message_store_cpp.test  mongodb_store_cpp_test.cpp
mongodb_store_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mongodb_store_msgs/action/: MoveEntries.action
mongodb_store_msgs/msg/: Insert.msg
mongodb_store_msgs/srv/: MongoInsertMsg.srv  MongoQueryMsg.srv  MongoUpdateMsg.srv
ros_datacentre/: CHANGELOG.rst  CMakeLists.txt  README.md  backup_config.yaml  package.xml  setup.py
ros_datacentre/defaults/: README.md  twitter_params.yaml
ros_datacentre/doc/: Makefile  conf.py  index.rst  manifest.yaml  message_store_proxy.rst  modules.rst  util.rst
ros_datacentre/launch/: datacentre.launch
ros_datacentre/scripts/: config_manager.py  example_message_store_client.py  example_multi_event_log.py  message_store.py  message_store_node.py  mongo_bridge.py  mongodb_server.py  replicator_client.py  replicator_node.py
ros_datacentre/src/ros_datacentre/: message_store.py  util.py
ros_datacentre/srv/: MongoFind.srv  MongoInsert.srv  SetParam.srv
ros_datacentre/tests/: messagestore.test  test_messagestore.py
ros_datacentre_cpp_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_datacentre_cpp_client/include/: message_store.h
ros_datacentre_cpp_client/include/ros_datacentre/: message_store.h  utils.h
ros_datacentre_cpp_client/src/: example_multi_event_log.cpp  example_ros_datacentre_cpp_client.cpp  message_store.cpp  point_cloud_test.cpp
ros_datacentre_cpp_client/tests/: message_store_cpp.test  ros_datacentre_cpp_test.cpp
ros_datacentre_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_datacentre_msgs/action/: MoveEntries.action
ros_datacentre_msgs/msg/: SerialisedMessage.msg  StringPairList.msg
ros_datacentre_msgs/srv/: MongoDeleteMsg.srv  MongoInsertMsg.srv  MongoQueryID.srv  MongoQueryMsg.srv  MongoUpdateMsg.srv
src/: mongodb_log.py  mongolog.py  mongolog_cimg.cpp  mongolog_pcl.cpp  mongolog_tf.cpp  mongolog_trimesh.cpp  mongorrd.py  procrrd.py  rosmongolog.lua  rosmongolog.py  rosmongolog_cimg.cpp  rosmongolog_mp.py  rosmongolog_pcl.cpp  rosmongolog_tf.cpp  rosmongolog_trimesh.cpp
strands_datacentre/: CMakeLists.txt  README.md  package.xml  setup.py
strands_datacentre/scripts/: config_manager.py  mongo_bridge.py  mongodb_server.py
strands_datacentre/src/strands_datacentre/: util.py
strands_datacentre/srv/: MongoUpdate.srv
strands_diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
strands_diagnostics/msg/: DiagnosticMessage.msg
strands_diagnostics/scripts/: logger
strands_diagnostics/src/strands_diagnostics/: logger.py
