<?xml version="1.0"?>
<package format="3">
  <name>mongodb_log</name>
  <version>0.6.0</version>
  <description>The mongodb_log package</description>

  <author email="tim@niemueller.de">Tim Niemueller</author>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>GPLv2</license>
  <url type="website">http://ros.org/wiki/mongodb_log</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>mongodb_store</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pymongo</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pymongo</exec_depend>
  <exec_depend>mongodb_store</exec_depend>

  <export>
  </export>
</package>
