<?xml version="1.0"?>
<package>
  <name>mongodb_store</name>
  <version>0.0.5</version>
  <description>A MongoDB based central store for data from a ROS system, eg. configurations, logged states, etc</description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>
  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>mongodb</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>libssl-dev</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  
  <export>
	<rosdoc config="rosdoc.yaml"/>
  </export>
</package>
