<?xml version="1.0"?>
<package>
  <name>mongodb_store</name>
  <version>0.1.19</version>
  <description>A package to support MongoDB-based storage and analysis for data from a ROS system, eg. saved messages, configurations etc</description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
  <author>Chris Burbridge</author>
  <author>Nick Hawes</author>

  <url type="website">http://www.ros.org/wiki/mongodb_store</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>mongodb</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>mongo_cxx_driver</build_depend>
  <build_depend>libssl-dev</build_depend>
  <!-- Used for examples -->
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>mongodb</run_depend>
  <run_depend>mongodb-dev</run_depend>
  <run_depend>mongo_cxx_driver</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <!-- Used for examples -->
  <run_depend>geometry_msgs</run_depend>

  <export>
	<rosdoc config="rosdoc.yaml"/>
  </export>
</package>
