<?xml version="1.0"?>
<package>
  <name>mongodb_store_cpp_client</name>
  <version>0.0.5</version>
  <description>The mongodb_store_cpp_client package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/mongodb_store_cpp_client</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>


  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mongodb-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
