<?xml version="1.0"?>
<package>
  <name>mongodb_store_msgs</name>
  <version>0.4.1</version>
  <description>The mongodb_store_msgs package</description>

  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="nickh@robots.ox.ac.uk">Nick Hawes</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
   <run_depend>message_generation</run_depend>

<build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

<run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  
</package>
