<?xml version="1.0"?>
<package>
  <name>ros_datacentre_msgs</name>
  <version>0.0.1</version>
  <description>The ros_datacentre_msgs package</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

</package>