<?xml version="1.0"?>
<package>
  <name>strands_datacentre</name>
  <version>0.0.1</version>
  <description>A MongoDB based central store for strands data, eg. configurations, logged states, etc</description>

  <maintainer email="cburbridge@gmail.com">chris burbridge</maintainer>
  <author email="cburbridge@gmail.com">chris burbridge</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>python-pymongo</run_depend>



  <export>

  </export>
</package>