<?xml version="1.0"?>
<package>
  <name>strands_diagnostics</name>
  <version>0.0.2</version>
  <description>The strands_diagnostics package</description>

  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/strands-project/strands_utils/strands_diagnostics</url>   
  <author email="cburbridge@gmail.com">Chris Burbridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_datacentre</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_datacentre</run_depend>
  <run_depend>rosgraph_msgs</run_depend>

</package>